# Camera_Lidar_Fusion

./: .gitignore  .gitmodules  README.md
camera_lidar_project/: CMakeLists.txt  package.xml
camera_lidar_project/cfg/: Homework4.cfg  Lidar_ekf.cfg
camera_lidar_project/launch/: camera_lidar_fusion.launch
camera_lidar_project/msg/: FusedObject.msg  FusedObjectArray.msg
camera_lidar_project/rviz/: rviz_config.rviz
camera_lidar_project/src/: CameraLidarFusion.cpp  CameraLidarFusion.hpp  Homework4.cpp  Homework4.hpp  Lidar_ekf.cpp  Lidar_ekf.hpp  ObjectEkf.cpp  ObjectEkf.hpp  SyncedYoloData.cpp  SyncedYoloData.hpp  lidar_ekf_node.cpp  synced_yolo_data.cpp
darknet_ros/darknet_ros/config/: ros.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  yolo_v3.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
